<resources>
    <string name="app_name">FlittingK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">All</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="categories">Categories</string>
    <string name="description">Description</string>
    <string name="files">Files</string>
    <string name="request_help">request help</string>
    <string name="set_tags">set tags</string>
    <string name="set_description">set description</string>
    <string name="home">Home</string>
    <string name="listings">Listings</string>
    <string name="requests">Requests</string>
    <string name="save_listing">save listing</string>
    <string name="from">From:</string>
    <string name="message">Message:</string>
    <string name="james_bond">James Bond</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="location_string">%s, %s</string>
    <string name="pending">Pending</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Email</string>
    <string name="phone">phone</string>
    <string name="city_country">City, Country</string>
    <string name="search_for_help">Search for Help...</string>
</resources>
