<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/house">

    <!--todo create header image-->
    <ImageView
        android:id="@+id/header_image"
        android:layout_width="0dp"
        android:layout_height="160dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/flitting"
        android:padding="32dp"/>

    <android.support.v7.widget.SearchView
        android:id="@+id/homeSearchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        app:iconifiedByDefault="false"
        app:queryHint="@string/search_for_help"
        android:background="@color/translucent_white"
        app:goIcon="@drawable/ic_arrow_forward_white_24dp"
        android:foregroundTint="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_image"
        tools:autofillHints="@string/accepted"
        tools:tooltipText="@string/all" />

    <!--todo figure out how to show notifications-->
    <android.support.design.card.MaterialCardView
        android:id="@+id/homeCard1"
        style="@style/CardStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeSearchView">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/homeIcon1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:src="@drawable/ic_notifications_black_24dp"
                android:tint="@color/materialBlueLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="You have pending requests."
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/homeIcon1"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:src="@drawable/ic_arrow_forward_white_24dp"
                android:tint="@color/materialGrey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:id="@+id/homeCard2"
        style="@style/CardStyle"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeCard1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/homeIcon2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:src="@drawable/ic_rate_review_black_24dp"
                android:tint="@color/materialBlueLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descriptionTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="You have 5 reviews."
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/homeIcon2"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:src="@drawable/ic_arrow_forward_white_24dp"
                android:tint="@color/materialGrey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </android.support.design.card.MaterialCardView>
</android.support.constraint.ConstraintLayout>